--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.8.3",
     "react-router-dom": "^7.13.0",
     "react-table": "^7.8.0"
   },
